--- a/public/assets/client/css/style.css
+++ b/public/assets/client/css/style.css
@@ -33,56 +33,13 @@ h6,
 }
 
 
-/*** Button ***/
-.btn {
-    font-family: 'Nunito', sans-serif;
-    font-weight: 600;
-    transition: .5s;
-}
-
-.btn-primary,
-.btn-secondary {
-    color: #FFFFFF;
-    box-shadow: inset 0 0 0 50px transparent;
-}
-
-.btn-primary:hover {
-    box-shadow: inset 0 0 0 0 var(--primary);
-}
-
-.btn-secondary:hover {
-    box-shadow: inset 0 0 0 0 var(--secondary);
-}
-
-.btn-square {
-    width: 36px;
-    height: 36px;
-}
-
-.btn-sm-square {
-    width: 30px;
-    height: 30px;
-}
-
-.btn-lg-square {
-    width: 48px;
-    height: 48px;
-}
-
-.btn-square,
-.btn-sm-square,
-.btn-lg-square {
-    padding-left: 0;
-    padding-right: 0;
-    text-align: center;
-}
 
 
 /*** Navbar ***/
 .navbar-dark .navbar-nav .nav-link {
     font-family: 'Nunito', sans-serif;
     position: relative;
-    margin-left: 25px;
+    margin-left: 15px;
     color: #6d6d6d;
     font-size: 18px;
     font-weight: 600;
@@ -444,74 +401,72 @@ aside {
     display: flex;
     margin: 0 auto;
     width: 100%;
-}
 
-
-.dropdown-item-button {
-    font-weight: bolder;
-    border-radius: 5px;
-    outline: none;
-    border: none;
-    padding: 10px;
-    text-align: left;
-    width: 100%;
-    color: black;
-
-    a {
+    .dropdown-item-button {
+        font-weight: bolder;
+        border-radius: 5px;
+        outline: none;
+        border: none;
+        padding: 10px;
+        text-align: left;
+        width: 100%;
         color: black;
-        text-decoration: none;
+    
+        a {
+            color: black;
+            text-decoration: none;
+        }
     }
-}
-
-.dropdown-menu-end {
-    top: 0;
-    left: 100%;
-}
-
-.dropdown-menu {
-    padding: 0;
-    color: black;
-    background-color: white;
-    display: none;
-    position: absolute;
-    background-color: #fff;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-}
-
-.dropdown-menu li a {
-    font-weight: bolder;
-}
-
-.dropdown-menu li a:hover {
-    border-radius: 5px;
-    background-color: black;
-    color: orange;
-}
-.dropdown-item-button:hover {
-
-    background-color: black;
-
-    a {
+    
+    .dropdown-menu-end {
+        top: 0;
+        left: 100%;
+    }
+    
+    .dropdown-menu {
+        padding: 0;
+        color: black;
+        background-color: white;
+        display: none;
+        position: absolute;
+        background-color: #fff;
+        box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+        z-index: 1;
+    }
+    
+    .dropdown-menu li a {
+        font-weight: bolder;
+    }
+    
+    .dropdown-menu li a:hover {
+        border-radius: 5px;
+        background-color: black;
         color: orange;
-        text-decoration: none;
+    }
+    .dropdown-item-button:hover {
+    
+        background-color: black;
+    
+        a {
+            color: orange;
+            text-decoration: none;
+        }
+    }
+    .nav-item:hover .dropdown-menu {
+        display: block;
+    }
+    .dropdown-item-button{
+        height: 40px;
+    
     }
 }
-.nav-item:hover .dropdown-menu {
-    display: block;
-}
-.dropdown-item-button{
-    height: 40px;
 
-}
+
+
 .fas {
     float: right;
 }
 
-.dropdown-toggle::after {
-
-    display: none !important;
-}
 
 .container-banner-nav {
     text-align: center;
@@ -696,7 +651,6 @@ marquee {
     border-radius: 8px 8px 0 0;
     margin: 20px auto;
     padding: 20px;
-    max-width: 1100px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     
 }
@@ -726,7 +680,6 @@ marquee {
     color: #e51616;
     margin: 20px auto;
     padding: 20px;
-    max-width: 1250px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
@@ -867,7 +820,6 @@ marquee {
     height: 24px;
     background-color: #f5537d;
     display: inline-block;
-    margin-right: 10px;
     border-radius: 4px;
     text-align: center;
     line-height: 24px;
@@ -913,6 +865,7 @@ button.see-more {
     max-width: 200px;
     margin-left: auto;
     margin-right: auto;
+    height: 50px;
 }
 
 button.see-more:hover {
@@ -1066,7 +1019,7 @@ button.see-more:hover {
     background-size: cover;
 }
 
-.my-6 .container .col-xl-2 {
+.my-6 .col-xl-2 {
     margin-bottom: 20px;
 
 }
@@ -1128,15 +1081,6 @@ button.see-more:hover {
     border: 1px solid #ced4da;
 }
 
-.btn-primary {
-    border-radius: 0.5rem;
-    background-color: #007bff;
-    border-color: #007bff;
-}
-
-.btn-secondary {
-    border-radius: 0.5rem;
-}
 
 .toggle-forms {
     color: black;
@@ -1167,7 +1111,7 @@ button.see-more:hover {
     position: relative;
 }
 
-.my-7 .container .col-xl-2 {
+.my-7 .col-xl-2 {
     margin-bottom: 20px;
 
 }
@@ -1226,26 +1170,6 @@ button.see-more:hover {
         text-align: end;
     }
 
-    .btn-primary {
-        background-color: #007bff;
-        border-color: #007bff;
-    }
-
-    .btn-primary:hover {
-        background-color: #0056b3;
-        border-color: #0056b3;
-    }
-
-    .btn-danger {
-        background-color: #dc3545;
-        border-color: #dc3545;
-    }
-
-    .btn-danger:hover {
-        background-color: #bd2130;
-        border-color: #bd2130;
-    }
-
     .col-md-2 {
         overflow: hidden;
         text-overflow: ellipsis;
@@ -1274,31 +1198,6 @@ button.see-more:hover {
     margin: 20px;
 }
 
-#btn-thugon,
-#btn-xemthem {
-    padding: 10px 20px;
-    font-size: 16px;
-    font-weight: bold;
-    color: #fff;
-    background-color: #007bff;
-    border: none;
-    border-radius: 25px;
-    cursor: pointer;
-    transition: background-color 0.3s, box-shadow 0.3s;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-#btn-thugon:hover,
-#btn-xemthem:hover {
-    background-color: #0056b3;
-    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
-}
-
-#btn-thugon:focus,
-#btn-xemthem:focus {
-    outline: none;
-    box-shadow: 0 0 0 3px rgba(0, 123, 255, 0.5);
-}
 
 .my-8 {
     margin-top: 30px;
@@ -1512,9 +1411,7 @@ button.see-more:hover {
 
 
 .container {
-    display: flex;
     margin: 0 auto;
-    padding: 20px;
 }
 
 .sidebar {
@@ -1809,14 +1706,6 @@ progress {
   margin-left: auto;
   margin-right: auto;
   text-align: center;
-}
-button {
-  font-size: 1em;
-  font-weight: 600;
-  border: none;
-  height: 65px;
-  cursor: pointer;
-  text-transform: uppercase;
 }
 
 .btn-wrap {
